--- a/sparklehood/ai-safety-incident-log/package.json
+++ b/sparklehood/ai-safety-incident-log/package.json
@@ -17,11 +17,13 @@
     "@prisma/client": "^5.10.2",
     "body-parser": "^2.2.0",
     "express": "^4.21.2",
+    "nodemailer": "^7.0.0",
     "prisma": "^5.10.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
+    "@types/nodemailer": "^6.4.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
