updated docker file

--- a/sparklehood/ai-safety-incident-log/Dockerfile
+++ b/sparklehood/ai-safety-incident-log/Dockerfile
@@ -17,4 +17,9 @@ COPY . .
 EXPOSE 3000
 
 # Command to run the application
-CMD ["npm", "start"] 
+CMD ["npm", "start"]
+
+FROM jenkins/jenkins:lts
+USER root
+RUN apt-get update && apt-get install -y docker.io ca-certificates
+USER jenkins 
