--- a/sparklehood/ai-safety-incident-log/Jenkinsfile
+++ b/sparklehood/ai-safety-incident-log/Jenkinsfile
@@ -34,6 +34,12 @@ pipeline {
             }
         }
 
+        stage('Build App Docker Image') {
+            steps {
+                sh 'docker build -t ai-safety-incident-log:latest -f Dockerfile .'
+            }
+        }
+
         stage('Build') {
             steps {
                 script {
